# yay-tsa

./: .bundlewatchrc.json  .dockerignore  .editorconfig  .env.example  .gitignore  .hadolint.yaml  .jscpd.json  .markdownlint.yaml  .markdownlintignore  .mise.toml  .pre-commit-config.yaml  .prettierignore  .stylelintrc.json  .treemapperignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CORRECTNESS.md  Dockerfile  FEATURES.md  FEATURES_OVERVIEW.md  ISSUES.md  LEVERAGE.md  LICENSE.md  Makefile  PAINPOINTS.md  PRODUCT.md  PR_DESCRIPTION.md  QA.md  README.md  REVIEW_CORRECTNESS.md  REVIEW_TESTS.md  SECURITY.md  TECHNICAL_DEBT.md  UX.md  build.gradle.kts  commitlint.config.js  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  (+1325 more)
.github/: dependabot.yml
.github/workflows/: automerge.yml  (+7 more)
.playwright-mcp/: page-2026-04-12T11-32-04-196Z.yml
.pre-commit-hooks/: no_emoji.py  shift_commit_time.py
.treemapper/: api.whitelist  audio.whitelist  backend.whitelist  cicd.whitelist  core.whitelist  dj.whitelist  domain.whitelist  frontend-features.whitelist  frontend-pages.whitelist  frontend.whitelist  karaoke.whitelist  review-api.whitelist  review-audio.whitelist  review-backend.whitelist  review-cicd.whitelist  review-core.whitelist  review-domain.whitelist  review-frontend-features.whitelist  review-frontend-pages.whitelist  review-frontend.whitelist  tests.whitelist
app/: build.gradle.kts
core-application/: build.gradle.kts
docker/: docker-compose.yml  example.env
docs/: FUTURE_STACK.md  PRE_COMMIT_SETUP.md  future-stack.md  media-session-lockscreen.md  perf-profile.md  plan-karaoke-feature.md  tech-stack.md
infra-karaoke-worker/: build.gradle.kts
infra-library-scanner/: build.gradle.kts
infra-notifications/: build.gradle.kts
scripts/: bump-version.sh  bundle-report.mjs  check-dto-drift.py  dto-pairs.yaml  etl-migrate.sql  gen-constants.mjs  generate-splash-screens.js  generate-test-media.sh  init-test-library.sh  profile-images.mjs  profile-web.mjs  setup-pre-commit.sh  sync-version.js  validate-migration.sql
server/: .env.example  CLAUDE.md  Dockerfile  ENDPOINT_VERIFICATION.md  README.md  docker-compose.yml  docker-entrypoint.sh  pom.xml
services/audio-ml/: .dockerignore  Dockerfile  app.py  db.py  extractor_cli.py  lyrics_sync.py  pyproject.toml  taste_clusters.py  vulture_whitelist.py
services/audio-ml/extractor/: embedding_extractor.py  essentia_analyzer.py
services/audio-ml/patches/: patch_audio_separator.py
services/audio-ml/radio/: seed_selector.py
services/audio-ml/requirements/: base.txt  cpu.lock.txt  cpu.txt  essentia-base.lock.txt  essentia-base.txt  essentia.txt  gpu.lock.txt  gpu.txt  test.txt
services/audio-ml/tests/: test_seed_selector.py
services/audio-separator/: Dockerfile  app.py  pyproject.toml  requirements-gpu.txt
services/audio-separator/extractor/: embedding_extractor.py  essentia_analyzer.py
services/audio-separator/radio/: seed_selector.py
services/audio-separator/requirements/: cpu.txt  essentia-base.txt  essentia.txt  gpu.txt
services/audio-separator/scripts/: download_models.sh
services/audio-separator/tests/: conftest.py  test_compute_seeds_endpoint.py
tools/: post-deploy-qa.sh
yay-tsa-v2/: .gitignore  ANALYSIS.md  CLAUDE.md  CUTOVER_RUNBOOK.md  Dockerfile  ISSUES.md  build.gradle.kts  detekt.yml  docker-compose.yml  gradle.properties  gradlew  settings.gradle.kts
(+1561 files in other folders)
