[project]
name = "audio-separator"
version = "0.1.0"
requires-python = ">=3.13"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes (unused imports, undefined names)
  "I",    # isort (import ordering)
  "UP",   # pyupgrade (modern Python syntax)
  "B",    # flake8-bugbear (common bug patterns)
  "S",    # flake8-bandit (security)
  "C4",   # flake8-comprehensions
  "SIM",  # flake8-simplify
  "RUF",  # ruff-specific rules
  "T20",  # flake8-print (no print() in production)
  "PIE",  # flake8-pie (misc lints)
  "PERF", # perflint (performance anti-patterns)
  "PLC",  # pylint convention
  "PLE",  # pylint errors
  "PLW",  # pylint warnings
  "FLY",  # flynt (f-string conversion)
  "FURB", # refurb (modern Python idioms)
]
ignore = [
  "E501",    # line too long — enforced by ruff-format
  "B008",    # function calls in defaults — FastAPI Depends() pattern
  "PLC0415", # import not at top-level — intentional lazy imports for heavy ML libraries
  "S404",    # subprocess import — legitimate for FFmpeg orchestration (bandit B404)
  "S603",    # subprocess without shell — fixed-arg FFmpeg invocations (bandit B603)
  "S607",    # partial executable path — ffmpeg expected in PATH (bandit B607)
  "S110",    # try/except/pass — optional model/feature loading (bandit B110)
]

[tool.ruff.lint.per-file-ignores]
"extractor/**" = ["B006"]
"**/patches/**" = ["T20"]
"**/vulture_whitelist.py" = ["F821", "E501"]
"**/tests/**" = ["S101"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "extractor.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "vulture_whitelist"
ignore_errors = true
